--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ version = "0.0.1"
 authors = ["Carl Lerche <me@carllerche.com>"]
 
 [dependencies.nix]
+
+git = "https://github.com/carllerche/nix-rust"
